fix: right-align modal actions for delete version modal

--- a/client/src/pages/UserApp/VersionsCard/VersionsCard.module.css
+++ b/client/src/pages/UserApp/VersionsCard/VersionsCard.module.css
@@ -6,10 +6,3 @@
     display: inline-block;
     margin-top: var(--spacers-dp12);
 }
-
-.modalActions {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    margin-top: var(--spacers-dp16);
-}
